# shrike

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: simple_client.cpp  simple_data.h  simple_service.cpp
include/shrike/: exceptions.h  shrike.h  types.h
include/shrike/http/: httpclient.h  httprequest.h  httpresponse.h  httpservice.h
include/shrike/serialization/: jsonserializer.h  objectserializer.h  serializableobject.h
source/http/: httpclient.cpp  httpclient_impl.cpp  httpclient_impl.h  httprequest.cpp  httpresponse.cpp  httpservice.cpp  httpservice_impl.cpp  httpservice_impl.h  tokenizer.cpp  tokenizer.h  url_codec.cpp  url_codec.h
source/serialization/: jsonserializer.cpp  objectserializer.cpp  serializableobject.cpp
